# todayintech

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docusaurus.config.js  package-lock.json  package.json  pyproject.toml  sidebars.js
.github/workflows/: daily-briefing.yml  static-pages.yml
data/: briefed_articles.json
docs/: index.md
docs/operations/: collection.mdx  enrichment.mdx  index.mdx  preprocessing.mdx  services.mdx  writer.mdx
docs/services/: anthropic-blog.md  github-blog.md  google-blog.md  hacker-news.md  openai-blog.md
harness/: ARCHITECTURE.md  BRAND.md  COMMIT_MESSAGE.md  ENV.md  OVERVIEW.md  QUALITY.md  TASKS.md  TECH_STACK.md
harness/service/: BRAND_ASSETS.md  SERVICES.md
i18n/en/: code.json
notes/en/: AGENTS.md
src/: __init__.py  main.py  progress.py  settings.py
src/collection/: __init__.py  __main__.py  news_collector.py  raw_writer.py
src/css/: custom.css
src/enrichment/: __init__.py  __main__.py  content_enricher.py  context.py  errors.py  models.py
src/generator/: __init__.py  markdown_safety.py  service_markdown_writer.py  summary_markdown_writer.py
src/models/: __init__.py  article.py
src/operations/: __init__.py  __main__.py  operations_data_writer.py  trace_history_reader.py  trace_metrics_builder.py
src/processing/: __init__.py  __main__.py  article_candidate.py  briefed_article_store.py  candidate_identity.py  candidate_scorer.py  classifier.py  context.py  deduplicator.py  enums.py  models.py  news_preprocessor.py  preprocessing_context.py  preprocessing_step.py  processed_writer.py  scorer.py  summarizer.py  url_normalizer.py
src/services/: __init__.py  anthropic_blog.py  base.py  factory.py  github_blog.py  google_blog.py  hacker_news.py  openai_blog.py  rss_service.py
src/sources/: __init__.py  factory.py
src/theme/: MDXComponents.js
src/tracing/: __init__.py  collection_trace.py  enrichment_trace.py  preprocessing_trace.py  writer_trace.py
src/writer/: __init__.py  __main__.py  news_writer.py
tests/collection/: test_collection_cli.py  test_collection_trace.py  test_rss_collector.py  test_source_contracts.py
tests/enrichment/: test_adaptive_policy.py  test_content_enricher.py  test_enrichment_cache.py  test_html_extractor.py  test_http_fetcher.py  test_structural_evidence_selector.py
tests/generator/: test_markdown_safety.py
(+790 files in other folders)
